--- a/contact/index.html
+++ b/contact/index.html
@@ -294,7 +294,7 @@ img.emoji {
 					<input size="10" type="text" name="form_fields[field_1]" id="form-field-field_1" class="elementor-field elementor-size-md  elementor-field-textual" placeholder="Company"></div>
 					<div class="elementor-field-type-email elementor-field-group elementor-column elementor-field-group-email elementor-col-100 elementor-field-required">
 					<label for="form-field-email" class="elementor-field-label elementor-screen-only">Email</label>
-					<input size="1" type="email" name="form_fields[email]" id="form-field-email" class="elementor-field elementor-size-md  elementor-field-textual" placeholder="Email" required="required" aria-required="true"></div>
+					<input  type="email" name="form_fields[email]" id="form-field-email" class="elementor-field elementor-size-md  elementor-field-textual" placeholder="Email" required="required" aria-required="true"></div>
 					<div class="elementor-field-type-email elementor-field-group elementor-column elementor-field-group-email elementor-col-100 elementor-field-required">
 					<label for="form-field-email" class="elementor-field-label elementor-screen-only">
 					
