--- a/contact/index.html
+++ b/contact/index.html
@@ -286,7 +286,7 @@ img.emoji {
 
 			
 						<form action="https://formsubmit.co/your@email.com" method="POST">
-			<div class="elementor-form-fields-wrapper elementor-labels-">
+						<div class="elementor-form-fields-wrapper elementor-labels-">
 								<div class="elementor-field-type-text elementor-field-group elementor-column elementor-field-group-name elementor-col-50">
 					<label for="form-field-name" class="elementor-field-label elementor-screen-only">Name</label><input size="1" type="text" name="form_fields[name]" id="form-field-name" class="elementor-field elementor-size-md  elementor-field-textual" placeholder="Name">				</div>
 								<div class="elementor-field-type-text elementor-field-group elementor-column elementor-field-group-field_1 elementor-col-50">
@@ -299,7 +299,7 @@ img.emoji {
 					<label for="form-field-email" class="elementor-field-label elementor-screen-only">
 					
 					</label>
-					<input size="50" type="tel" name="phone" id="phone" class="" placeholder="Phone Number" required="required" aria-required="true"></div>
+					<input size="30" type="tel" name="phone" id="phone" class="" placeholder="Phone Number" required="required" aria-required="true"></div>
 					<div class="elementor-field-type-textarea elementor-field-group elementor-column elementor-field-group-message elementor-col-100">
 					<label for="form-field-message" class="elementor-field-label elementor-screen-only">Message</label><textarea class="elementor-field-textual elementor-field  elementor-size-md" name="form_fields[message]" id="form-field-message" rows="4" placeholder="Message"></textarea>				</div>
 					<div class="elementor-field-group elementor-column elementor-field-type-submit elementor-col-100 e-form__buttons">
@@ -312,6 +312,7 @@ img.emoji {
 					</button>
 				</div>
 			</div>
+		</div>
 		</form>
 		<div class="alert alert-info" style="display: none;"></div>
 				</div>
