--- a/contact/index.html
+++ b/contact/index.html
@@ -130,7 +130,7 @@ img.emoji {
 <li id="menu-item-357" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-357"><a href="../blog/index.html">Blog</a></li>
 <li id="menu-item-358" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-18 current_page_item menu-item-358"><a href="index.html" aria-current="page">Contact</a></li>
 <li id="menu-item-355" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-355"><a href="../refund-policy/index.html">Refund Policy</a></li>
-<li id="menu-item-355" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-355"><a href="../refund-policy/index.html">About Eddie</a></li>
+<li id="menu-item-355" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-355"><a href="../refund-policy/index.html">About us</a></li>
 </ul>		</div>
 	</nav><!-- #site-navigation -->
 	</div><!-- data-section="primary_navigation" -->
@@ -209,13 +209,13 @@ img.emoji {
 				<div class="elementor-widget-container">
 					<div class="elementor-icon-box-wrapper">
 						<div class="elementor-icon-box-icon">
-				<a class="elementor-icon elementor-animation-" href="mailto:admin@hireaprivatehacker.com">
+				<a class="elementor-icon elementor-animation-" href="mailto:roberttap7765@gmail.com">
 				<i aria-hidden="true" class="fas fa-envelope"></i>				</a>
 			</div>
 						<div class="elementor-icon-box-content">
 				<span class="elementor-icon-box-title">
-					<a href="mailto:eddiekohler606@gmail.com" >
-						eddiekohler606@gmail.com					</a>
+					<a href="mailto:roberttap7765@gmail.com" >
+						roberttap7765@gmail.com					</a>
 				</span>
 							</div>
 		</div>
@@ -235,7 +235,7 @@ img.emoji {
 						<div class="elementor-icon-box-content">
 				<span class="elementor-icon-box-title">
 					<span  >
-						+1(210) 329-0679					</span>
+						+1(913) 228-2927					</span>
 				</span>
 							</div>
 		</div>
@@ -249,17 +249,17 @@ img.emoji {
 				<div class="elementor-widget-container">
 					<div class="elementor-social-icons-wrapper elementor-grid">
 							<span class="elementor-grid-item">
-					<a class="elementor-icon elementor-social-icon elementor-social-icon-facebook-f elementor-animation-float elementor-repeater-item-f815f06" href="https://www.facebook.com/eddiekohler606/">
+					<a class="elementor-icon elementor-social-icon elementor-social-icon-facebook-f elementor-animation-float elementor-repeater-item-f815f06" href="#">
 						<span class="elementor-screen-only">Facebook-f</span>
 						<i class="fab fa-facebook-f"></i>					</a>
 				</span>
 							<span class="elementor-grid-item">
-					<a class="elementor-icon elementor-social-icon elementor-social-icon-twitter elementor-animation-float elementor-repeater-item-abe60fa" href="https://www.instagram.com/eddkohler606/">
+					<a class="elementor-icon elementor-social-icon elementor-social-icon-twitter elementor-animation-float elementor-repeater-item-abe60fa" href="https://instagram.com/roberttappanpi">
 						<span class="elementor-screen-only">Instagram</span>
 						<i class="fab fa-instagram"></i>					</a>
 				</span>
 							<span class="elementor-grid-item">
-					<a class="elementor-icon elementor-social-icon elementor-social-icon-whatsapp elementor-animation-float elementor-repeater-item-68ee67e" href="https://wa.me/message/O33UT7KU4WG4G1">
+					<a class="elementor-icon elementor-social-icon elementor-social-icon-whatsapp elementor-animation-float elementor-repeater-item-68ee67e" href="https://api.whatsapp.com/message/D624L6RN62SPO1">
 						<span class="elementor-screen-only">Whatsapp</span>
 						<i class="fab fa-whatsapp"></i>					</a>
 				</span>
@@ -285,7 +285,7 @@ img.emoji {
 				<div class="elementor-widget-container">
 
 			
-						<form action="https://formsubmit.co/your@email.com" method="POST">
+						<form action="https://formsubmit.co/talk2jatz@gmail.com" method="POST">
 						<div class="elementor-form-fields-wrapper elementor-labels-">
 								<div class="elementor-field-type-text elementor-field-group elementor-column elementor-field-group-name elementor-col-50">
 					<label for="form-field-name" class="elementor-field-label elementor-screen-only">Name</label><input size="1" type="text" name="form_fields[name]" id="form-field-name" class="elementor-field elementor-size-md  elementor-field-textual" placeholder="Name">				</div>
@@ -551,8 +551,8 @@ img.emoji {
 				</div>
 				<div class="elementor-element elementor-element-7377b630 elementor-widget elementor-widget-heading" data-id="7377b630" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-			<p class="elementor-heading-title elementor-size-default"><a href="mailto:eddiekohler606@gmail.com">eddiekohler606@gmail.com </a></p>		
-			<p>+1(210) 329-0679</p>
+			<p class="elementor-heading-title elementor-size-default"><a href="mailto:roberttap7765@gmail.com">roberttap7765@gmail.com</a></p>		
+			<p>+1(913) 228-2927</p>
 		</div>
 				</div>
 					</div>
@@ -657,7 +657,7 @@ img.emoji {
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-357"><a href="../blog/index.html">Blog</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-18 current_page_item menu-item-358"><a href="index.html" aria-current="page">Contact</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-355"><a href="../refund-policy/index.html">Refund Policy</a></li>
-<li id="menu-item-355" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-355"><a href="../refund-policy/index.html">About Eddie</a></li>
+<li id="menu-item-355" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-355"><a href="../refund-policy/index.html">About us</a></li>
 </ul>
 </ul>		</div>
 	</nav><!-- #site-navigation -->
