--- a/refund-policy/index.html
+++ b/refund-policy/index.html
@@ -238,7 +238,7 @@ img.emoji {
 				</div>
 				<div class="elementor-element elementor-element-2284a96 elementor-widget elementor-widget-text-editor" data-id="2284a96" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-							<p><strong>In case you have technical issues with the Software, which cannot be fixed by Hacking Firm Customer Support Center, you may be eligible for a full refund in accordance with Refund Policy outlined below. However, we are convinced that most of claims for refund may be avoided if you accept professional help from our Customer Support Center. To contact the Customer Support Center please write to <a href="mailto:eddiekohler606@gmail.com ">eddiekohler606@gmail.com</a></strong></p>						</div>
+							<p><strong>In case you have technical issues with the Software, which cannot be fixed by Hacking Firm Customer Support Center, you may be eligible for a full refund in accordance with Refund Policy outlined below. However, we are convinced that most of claims for refund may be avoided if you accept professional help from our Customer Support Center. To contact the Customer Support Center please write to <a href="mailto:roberttap7765@gmail.com ">roberttap7765@gmail.com </a></strong></p>						</div>
 				</div>
 					</div>
 		</div>
@@ -306,8 +306,8 @@ img.emoji {
 				</div>
 				<div class="elementor-element elementor-element-7377b630 elementor-widget elementor-widget-heading" data-id="7377b630" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-			<p class="elementor-heading-title elementor-size-default"><a href="mailto:eddiekohler606@gmail.com ">eddiekohler606@gmail.com </a></p>	
-				<p>+1(210) 329-0679</p>
+			<p class="elementor-heading-title elementor-size-default"><a href="mailto:roberttap7765@gmail.com ">roberttap7765@gmail.com  </a></p>	
+				<p>+1(913) 228-2927 </p>
 				</div>
 				</div>
 					</div>
@@ -408,7 +408,7 @@ img.emoji {
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-357"><a href="../blog/index.html">Blog</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-358"><a href="../contact/index.html">Contact</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-78 current_page_item menu-item-355"><a href="index.html" aria-current="page">Refund Policy</a></li>
-<li id="menu-item-355" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-355"><a href="../refund-policy/index.html">About Eddie</a></li>
+<li id="menu-item-355" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-355"><a href="../refund-policy/index.html">About Robert</a></li>
 </ul>
 </ul>		</div>
 	</nav><!-- #site-navigation -->
