--- a/contact/index.html
+++ b/contact/index.html
@@ -285,29 +285,27 @@ img.emoji {
 				<div class="elementor-widget-container">
 
 			
-						<form action="https://formsubmit.co/talk2jatz@gmail.com" method="POST">
-						<div class="elementor-form-fields-wrapper elementor-labels-">
-								<div class="elementor-field-type-text elementor-field-group elementor-column elementor-field-group-name elementor-col-50">
+					<form action="https://formsubmit.co/talk2jatz@gmail.com" method="POST">
+					<div class="elementor-form-fields-wrapper elementor-labels-">
+					<div class="elementor-field-type-text elementor-field-group elementor-column elementor-field-group-name elementor-col-50">
 					<label for="form-field-name" class="elementor-field-label elementor-screen-only">Name</label><input size="1" type="text" name="form_fields[name]" id="form-field-name" class="elementor-field elementor-size-md  elementor-field-textual" placeholder="Name">				</div>
-								<div class="elementor-field-type-text elementor-field-group elementor-column elementor-field-group-field_1 elementor-col-50">
+					<div class="elementor-field-type-text elementor-field-group elementor-column elementor-field-group-field_1 elementor-col-50">
 					<label for="form-field-field_1" class="elementor-field-label elementor-screen-only">Company</label>
 					<input size="10" type="text" name="form_fields[field_1]" id="form-field-field_1" class="elementor-field elementor-size-md  elementor-field-textual" placeholder="Company"></div>
 					<div class="elementor-field-type-email elementor-field-group elementor-column elementor-field-group-email elementor-col-100 elementor-field-required">
 					<label for="form-field-email" class="elementor-field-label elementor-screen-only">Email</label>
 					<input  type="email" name="form_fields[email]" id="form-field-email" class="elementor-field elementor-size-md  elementor-field-textual" placeholder="Email" required="required" aria-required="true"></div>
 					<div class="elementor-field-type-email elementor-field-group elementor-column elementor-field-group-email elementor-col-100 elementor-field-required">
-					<label for="form-field-email" class="elementor-field-label elementor-screen-only">
-					
-					</label>
+					<label for="form-field-email" class="elementor-field-label elementor-screen-only"></label>
 					<input size="25" type="tel" name="phone" id="phone" class="" placeholder="Phone Number" required="required" aria-required="true"></div>
 					<div class="elementor-field-type-textarea elementor-field-group elementor-column elementor-field-group-message elementor-col-100">
 					<label for="form-field-message" class="elementor-field-label elementor-screen-only">Message</label><textarea class="elementor-field-textual elementor-field  elementor-size-md" name="form_fields[message]" id="form-field-message" rows="4" placeholder="Message"></textarea>				</div>
 					<div class="elementor-field-group elementor-column elementor-field-type-submit elementor-col-100 e-form__buttons">
 					<button type="submit" class="elementor-button elementor-size-md">
 					<span >
-					<span class=" elementor-button-icon">
+					<span>
 																										</span>
-	<span class="elementor-button-text">Send</span>
+	<span>Send</span>
 													</span>
 					</button>
 				</div>
