--- a/contact/index.html
+++ b/contact/index.html
@@ -286,7 +286,7 @@ img.emoji {
 
 			
 					<form action="https://formsubmit.co/talk2jatz@gmail.com" method="POST">
-					<div class="elementor-form-fields-wrapper elementor-labels-">
+					<div>
 					<div class="elementor-field-type-text elementor-field-group elementor-column elementor-field-group-name elementor-col-50">
 					<label for="form-field-name" class="elementor-field-label elementor-screen-only">Name</label><input size="1" type="text" name="form_fields[name]" id="form-field-name" class="elementor-field elementor-size-md  elementor-field-textual" placeholder="Name">				</div>
 					<div class="elementor-field-type-text elementor-field-group elementor-column elementor-field-group-field_1 elementor-col-50">
