--- a/contact/index.html
+++ b/contact/index.html
@@ -259,7 +259,7 @@ img.emoji {
 						<i class="fab fa-instagram"></i>					</a>
 				</span>
 							<span class="elementor-grid-item">
-					<a class="elementor-icon elementor-social-icon elementor-social-icon-whatsapp elementor-animation-float elementor-repeater-item-68ee67e" href="https://api.whatsapp.com/message/D624L6RN62SPO1">
+					<a class="elementor-icon elementor-social-icon elementor-social-icon-whatsapp elementor-animation-float elementor-repeater-item-68ee67e" href="https://wa.me/message/C5XHYPHFAEK6D1">
 						<span class="elementor-screen-only">Whatsapp</span>
 						<i class="fab fa-whatsapp"></i>					</a>
 				</span>
